testing/angular/angular-test/projects/test-app/src/app/ngrx/reducer/todolist.reducers.spec.ts
describe("default", () => {
  // it("should return init state", () => {
  //   const noopAction = new GenericAction("noop" as TodoListActionTypes);
  //   const newState = todoListReducers(undefined, noopAction);
  //   const initState = new TodoListInitState();
  //   expect(newState).toEqual(initState);
  // });
});
describe("loadTodoItems", () => {
  // it("should return isLoading true", () => {
  //   const initState = new TodoListInitState();
  //   const loadTodoItemsAction = new GenericAction(
  //     TodoListActionTypes.LoadTodoList
  //   );
  //   const newState = todoListReducers(initState, loadTodoItemsAction);
  //   expect(newState.isLoading).toBe(true);
  // });
});
describe("todoItemsLoadFailed", () => {
  // it("should return isLoading false and error", () => {
  //   const initState = new TodoListInitState();
  //   const error = new Error("http error");
  //   const loadTodoItemsAction = new GenericAction(
  //     TodoListActionTypes.TodoItemsLoadFailed,
  //     error
  //   );
  //   const newState = todoListReducers(initState, loadTodoItemsAction);
  //   expect(newState.isLoading).toBe(false);
  //   expect(newState.errors).toBe(error);
  // });
});
